# tools-py-oxr

./: .gitignore  README.md  build.py  data.db  environment.py  launcher.py  make.py  tree.py
app/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
app/src/: App.vue  components.d.ts  index.js  main.js  main.ts  pywebview.js  style.css
app/src/api/: index.ts
app/src/components/: HelloWorld.vue
app/src/components/comm-form/: index.vue
app/src/components/form-module/: types.ts
app/src/layout/: index.scss  index.vue
app/src/layout/Menu/: index.scss  index.vue
app/src/layout/Tabs/: index.vue
app/src/layout/theme/: common.scss  variable.scss
app/src/router/: index.ts
app/src/store/: index.js  index.ts
app/src/types/: components.d.ts
app/src/util/: api.js  api.ts  index.ts  request.js  request.ts
app/src/view/: Redirect.vue
app/src/view/config/: index.vue
app/src/view/convert/: index.vue
app/src/view/home/: index.vue
packaging/: build.bat  building.spec
scripts/: build.py  desktop.py  dev.py  install.py  util.py
server/: api.py  config.py  hiddenimports.py  index.yml  main.py  pyproject.toml  requireenv.txt  sys.py  utils.py
server/api/: file.py  sys.py
server/src/: util.py
server/src/for_ffmpeg/: __init__.py  db.py  main.py
server/src/for_ffmpeg/api/: __init__.py  conf.py  ffmpeg.py  models.py
server/src/tool_oxr/: api.py  data.db  db.py  main.py  models.py  util.py
server/src/tool_oxr/api/: conf.py  ffmpeg.py  filelist.txt  index.py  models.py
(+6 files in other folders)
